5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1674_1100.log
== TEST (2019-04-24 21:04:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("Digite o valor de cedula: "))

if((c!=2)or (c!=5) or (c!=10) or (c!=20) or (c!=50) or(c!=100)):
	print("Animal: Invalido")
else:
	elif (c==2):
		print("Animal: Tartaruga")
	elif (c==5):
		print("Animal: Graca")
	elif (c==10):
		print("Animal: Arara")
	elif (c==20):
		print("Animal: Mico-leao-dourado")
-- ERROR:
File "XXXX", line 9
    elif (c==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:05:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("Digite o valor de cedula: "))

if((c!=2)or (c!=5) or (c!=10) or (c!=20) or (c!=50) or(c!=100)):
	print("Animal: Invalido")
	
	elif (c==2):
		print("Animal: Tartaruga")
	elif (c==5):
		print("Animal: Graca")
	elif (c==10):
		print("Animal: Arara")
	elif (c==20):
		print("Animal: Mico-leao-dourado")
-- ERROR:
File "XXXX", line 9
    elif (c==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:05:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("Digite o valor de cedula: "))

if((c!=2)or (c!=5) or (c!=10) or (c!=20) or (c!=50) or(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
	
-- OUTPUT:
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:06:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
	
-- OUTPUT:
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:06:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif
	
-- ERROR:
File "XXXX", line 16
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:06:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")

	
-- ERROR:
File "XXXX", line 16
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:06:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")

	
-- ERROR:
File "XXXX", line 16
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:06:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")

	
-- ERROR:
File "XXXX", line 16
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:07:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal:Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:07:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal:Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 21:08:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal:Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.118619
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal:Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:08:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal:Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:08:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal:Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:08:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal:Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 21:08:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal:Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.193009
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal:Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:09:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:09:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graça")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onça-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:09:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:10:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:10:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 21:10:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.147068
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 21:10:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.202752
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:06:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if((c!=2)and (c!=5) and (c!=10) and (c!=20) and (c!=50) and(c!=100)):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:08:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:08:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.194587
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:08:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:08:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.142893
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:09:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:09:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:09:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Graca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:10:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.148332
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:10:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.120945
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if(c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:11:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if (c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:11:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if (c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.199778
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:11:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if (c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:11:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if (c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.126013
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if (c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if (c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
	elif (c==2):
		print("Animal: Tartaruga")
	elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- ERROR:
File "XXXX", line 8
    elif (c==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if (c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:13:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if (c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.225728
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if (c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal:Garoupa")
	
-- OUTPUT:
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if (c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal:Garoupa")
	
-- OUTPUT:
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

if (c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal:Onca-pintada")
elif (c==100):
	print("Animal:Garoupa")
	
-- OUTPUT:
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:14:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

print("Entrada:", c )
if (c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:14:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("Digite o valor de cedula: "))

print("Entrada:", c )
if (c!=2 and c!=5 and c!=10 and c!=20 and c!=50 and c!=100):
	print("Animal: Invalido")	
elif (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.128605
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
